xdbd-sql-parser/sql-select.output
Grammar

    0 $accept: sql_statement $end

    1 sql_statement: sql_select_statement
    2              | sql_update_statement
    3              | sql_insert_statement
    4              | sql_delete_statement
    5              | sql_set_statement

    6 sql_select_statement: SELECT sql_columns_part FROM sql_tables_part WHERE sql_expression_part sql_order_by SEMICOLON
    7                     | SELECT sql_columns_part FROM sql_tables_part WHERE sql_expression_part SEMICOLON
    8                     | SELECT sql_columns_part FROM sql_tables_part WHERE sql_expression_part sql_order_by
    9                     | SELECT sql_columns_part FROM sql_tables_part WHERE sql_expression_part
   10                     | SELECT sql_columns_part FROM sql_tables_part sql_order_by SEMICOLON
   11                     | SELECT sql_columns_part FROM sql_tables_part SEMICOLON
   12                     | SELECT sql_columns_part FROM sql_tables_part sql_order_by
   13                     | SELECT sql_columns_part FROM sql_tables_part

   14 sql_update_statement: UPDATE sql_table_part SET sql_eq_expressions_part WHERE sql_expression_part SEMICOLON
   15                     | UPDATE sql_table_part SET sql_eq_expressions_part WHERE sql_expression_part
   16                     | UPDATE sql_table_part SET sql_eq_expressions_part SEMICOLON
   17                     | UPDATE sql_table_part SET sql_eq_expressions_part

   18 sql_insert_statement: INSERT INTO sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR SEMICOLON
   19                     | INSERT INTO sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR
   20                     | INSERT INTO sql_table_part VALUES LBR sql_values_part RBR SEMICOLON
   21                     | INSERT INTO sql_table_part VALUES LBR sql_values_part RBR

   22 sql_delete_statement: DELETE FROM sql_table_part WHERE sql_expression_part SEMICOLON
   23                     | DELETE FROM sql_table_part WHERE sql_expression_part
   24                     | DELETE FROM sql_table_part SEMICOLON
   25                     | DELETE FROM sql_table_part

   26 sql_set_statement: SET CATALOG sql_catalog

   27 sql_catalog: NAME

   28 sql_columns_part: %empty
   29                 | sql_columns

   30 sql_columns: sql_column sql_as_part
   31            | sql_columns COMMA sql_column sql_as_part

   32 sql_column: sql_column_name
   33           | sql_table DOT sql_column_name
   34           | sql_function_name LBR sql_column_name RBR
   35           | sql_function_name LBR sql_table DOT sql_column_name RBR

   36 sql_column_name: NAME
   37                | ASTERISK
   38                | NAME sql_ordering

   39 sql_function_name: NAME

   40 sql_ordering: ASC
   41             | ASCENDING
   42             | DESC
   43             | DESCENDING

   44 sql_as_part: %empty
   45            | AS NAME

   46 sql_tables_part: sql_tables

   47 sql_tables: sql_table
   48           | sql_tables COMMA sql_table

   49 sql_table_part: sql_table

   50 sql_table: NAME

   51 sql_values_part: sql_values

   52 sql_values: sql_constant
   53           | sql_values COMMA sql_constant

   54 sql_constant: NUMBER
   55             | STRING
   56             | TNULL
   57             | QUESTION_MARK

   58 sql_eq_expressions_part: %empty
   59                        | sql_eq_expressions
   60                        | LBR sql_eq_expressions RBR

   61 sql_eq_expressions: sql_eq_expression
   62                   | sql_eq_expressions sql_eq_expression
   63                   | sql_eq_expressions COMMA sql_eq_expression

   64 sql_primary_expression: sql_column
   65                       | sql_constant

   66 sql_eq_expression: sql_primary_expression EQ sql_primary_expression

   67 sql_is_eq_expression: sql_primary_expression IS sql_primary_expression

   68 sql_ne_expression: sql_primary_expression NE sql_primary_expression

   69 sql_is_ne_expression: sql_primary_expression IS NOT sql_primary_expression

   70 sql_lt_expression: sql_primary_expression LT sql_primary_expression

   71 sql_le_expression: sql_primary_expression LE sql_primary_expression

   72 sql_gt_expression: sql_primary_expression GT sql_primary_expression

   73 sql_ge_expression: sql_primary_expression GE sql_primary_expression

   74 sql_like_expression: sql_primary_expression LIKE sql_primary_expression

   75 sql_comp_expression: sql_eq_expression
   76                    | sql_ne_expression
   77                    | sql_lt_expression
   78                    | sql_le_expression
   79                    | sql_gt_expression
   80                    | sql_ge_expression
   81                    | sql_like_expression
   82                    | LBR sql_expression RBR
   83                    | sql_is_eq_expression
   84                    | sql_is_ne_expression

   85 sql_and_expression: sql_comp_expression
   86                   | sql_and_expression AND sql_comp_expression

   87 sql_or_expression: sql_and_expression
   88                  | sql_or_expression OR sql_and_expression

   89 sql_expression_part: sql_expression

   90 sql_expression: sql_or_expression

   91 sql_order_by: ORDER BY sql_columns


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    SELECT (258) 6 7 8 9 10 11 12 13
    UPDATE (259) 14 15 16 17
    INSERT (260) 18 19 20 21
    DELETE (261) 22 23 24 25
    CATALOG (262) 26
    FROM (263) 6 7 8 9 10 11 12 13 22 23 24 25
    WHERE (264) 6 7 8 9 14 15 22 23
    INTO (265) 18 19 20 21
    TNULL (266) 56
    SET (267) 14 15 16 17 26
    VALUES (268) 18 19 20 21
    ORDER (269) 91
    BY (270) 91
    ASC (271) 40
    ASCENDING (272) 41
    DESC (273) 42
    DESCENDING (274) 43
    AS (275) 45
    SEMICOLON (276) 6 7 10 11 14 16 18 20 22 24
    COMMA (277) 31 48 53 63
    NAME (278) 27 36 38 39 45 50
    DOT (279) 33 35
    NUMBER (280) 54
    STRING (281) 55
    ASTERISK (282) 37
    QUESTION_MARK (283) 57
    EQ (284) 66
    IS (285) 67 69
    NE (286) 68
    NOT (287) 69
    LT (288) 70
    LE (289) 71
    GT (290) 72
    GE (291) 73
    LBR (292) 18 19 20 21 34 35 60 82
    RBR (293) 18 19 20 21 34 35 60 82
    AND (294) 86
    OR (295) 88
    LIKE (296) 74


Nonterminals, with rules where they appear

    $accept (42)
        on left: 0
    sql_statement <sql_part> (43)
        on left: 1 2 3 4 5
        on right: 0
    sql_select_statement <sql_part> (44)
        on left: 6 7 8 9 10 11 12 13
        on right: 1
    sql_update_statement <sql_part> (45)
        on left: 14 15 16 17
        on right: 2
    sql_insert_statement <sql_part> (46)
        on left: 18 19 20 21
        on right: 3
    sql_delete_statement <sql_part> (47)
        on left: 22 23 24 25
        on right: 4
    sql_set_statement <sql_part> (48)
        on left: 26
        on right: 5
    sql_catalog <sql_part> (49)
        on left: 27
        on right: 26
    sql_columns_part <sql_part> (50)
        on left: 28 29
        on right: 6 7 8 9 10 11 12 13 18 19
    sql_columns <sql_part> (51)
        on left: 30 31
        on right: 29 31 91
    sql_column <sql_part> (52)
        on left: 32 33 34 35
        on right: 30 31 64
    sql_column_name <sql_part> (53)
        on left: 36 37 38
        on right: 32 33 34 35
    sql_function_name <sql_part> (54)
        on left: 39
        on right: 34 35
    sql_ordering <sql_part> (55)
        on left: 40 41 42 43
        on right: 38
    sql_as_part <sql_part> (56)
        on left: 44 45
        on right: 30 31
    sql_tables_part <sql_part> (57)
        on left: 46
        on right: 6 7 8 9 10 11 12 13
    sql_tables <sql_part> (58)
        on left: 47 48
        on right: 46 48
    sql_table_part <sql_part> (59)
        on left: 49
        on right: 14 15 16 17 18 19 20 21 22 23 24 25
    sql_table <sql_part> (60)
        on left: 50
        on right: 33 35 47 48 49
    sql_values_part <sql_part> (61)
        on left: 51
        on right: 18 19 20 21
    sql_values <sql_part> (62)
        on left: 52 53
        on right: 51 53
    sql_constant <sql_part> (63)
        on left: 54 55 56 57
        on right: 52 53 65
    sql_eq_expressions_part <sql_part> (64)
        on left: 58 59 60
        on right: 14 15 16 17
    sql_eq_expressions <sql_part> (65)
        on left: 61 62 63
        on right: 59 60 62 63
    sql_primary_expression <sql_part> (66)
        on left: 64 65
        on right: 66 67 68 69 70 71 72 73 74
    sql_eq_expression <sql_part> (67)
        on left: 66
        on right: 61 62 63 75
    sql_is_eq_expression <sql_part> (68)
        on left: 67
        on right: 83
    sql_ne_expression <sql_part> (69)
        on left: 68
        on right: 76
    sql_is_ne_expression <sql_part> (70)
        on left: 69
        on right: 84
    sql_lt_expression <sql_part> (71)
        on left: 70
        on right: 77
    sql_le_expression <sql_part> (72)
        on left: 71
        on right: 78
    sql_gt_expression <sql_part> (73)
        on left: 72
        on right: 79
    sql_ge_expression <sql_part> (74)
        on left: 73
        on right: 80
    sql_like_expression <sql_part> (75)
        on left: 74
        on right: 81
    sql_comp_expression <sql_part> (76)
        on left: 75 76 77 78 79 80 81 82 83 84
        on right: 85 86
    sql_and_expression <sql_part> (77)
        on left: 85 86
        on right: 86 87 88
    sql_or_expression <sql_part> (78)
        on left: 87 88
        on right: 88 90
    sql_expression_part <sql_part> (79)
        on left: 89
        on right: 6 7 8 9 14 15 22 23
    sql_expression <sql_part> (80)
        on left: 90
        on right: 82 89
    sql_order_by <sql_part> (81)
        on left: 91
        on right: 6 8 10 12


State 0

    0 $accept: . sql_statement $end

    SELECT  shift, and go to state 1
    UPDATE  shift, and go to state 2
    INSERT  shift, and go to state 3
    DELETE  shift, and go to state 4
    SET     shift, and go to state 5

    sql_statement         go to state 6
    sql_select_statement  go to state 7
    sql_update_statement  go to state 8
    sql_insert_statement  go to state 9
    sql_delete_statement  go to state 10
    sql_set_statement     go to state 11


State 1

    6 sql_select_statement: SELECT . sql_columns_part FROM sql_tables_part WHERE sql_expression_part sql_order_by SEMICOLON
    7                     | SELECT . sql_columns_part FROM sql_tables_part WHERE sql_expression_part SEMICOLON
    8                     | SELECT . sql_columns_part FROM sql_tables_part WHERE sql_expression_part sql_order_by
    9                     | SELECT . sql_columns_part FROM sql_tables_part WHERE sql_expression_part
   10                     | SELECT . sql_columns_part FROM sql_tables_part sql_order_by SEMICOLON
   11                     | SELECT . sql_columns_part FROM sql_tables_part SEMICOLON
   12                     | SELECT . sql_columns_part FROM sql_tables_part sql_order_by
   13                     | SELECT . sql_columns_part FROM sql_tables_part

    NAME      shift, and go to state 12
    ASTERISK  shift, and go to state 13

    $default  reduce using rule 28 (sql_columns_part)

    sql_columns_part   go to state 14
    sql_columns        go to state 15
    sql_column         go to state 16
    sql_column_name    go to state 17
    sql_function_name  go to state 18
    sql_table          go to state 19


State 2

   14 sql_update_statement: UPDATE . sql_table_part SET sql_eq_expressions_part WHERE sql_expression_part SEMICOLON
   15                     | UPDATE . sql_table_part SET sql_eq_expressions_part WHERE sql_expression_part
   16                     | UPDATE . sql_table_part SET sql_eq_expressions_part SEMICOLON
   17                     | UPDATE . sql_table_part SET sql_eq_expressions_part

    NAME  shift, and go to state 20

    sql_table_part  go to state 21
    sql_table       go to state 22


State 3

   18 sql_insert_statement: INSERT . INTO sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR SEMICOLON
   19                     | INSERT . INTO sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR
   20                     | INSERT . INTO sql_table_part VALUES LBR sql_values_part RBR SEMICOLON
   21                     | INSERT . INTO sql_table_part VALUES LBR sql_values_part RBR

    INTO  shift, and go to state 23


State 4

   22 sql_delete_statement: DELETE . FROM sql_table_part WHERE sql_expression_part SEMICOLON
   23                     | DELETE . FROM sql_table_part WHERE sql_expression_part
   24                     | DELETE . FROM sql_table_part SEMICOLON
   25                     | DELETE . FROM sql_table_part

    FROM  shift, and go to state 24


State 5

   26 sql_set_statement: SET . CATALOG sql_catalog

    CATALOG  shift, and go to state 25


State 6

    0 $accept: sql_statement . $end

    $end  shift, and go to state 26


State 7

    1 sql_statement: sql_select_statement .

    $default  reduce using rule 1 (sql_statement)


State 8

    2 sql_statement: sql_update_statement .

    $default  reduce using rule 2 (sql_statement)


State 9

    3 sql_statement: sql_insert_statement .

    $default  reduce using rule 3 (sql_statement)


State 10

    4 sql_statement: sql_delete_statement .

    $default  reduce using rule 4 (sql_statement)


State 11

    5 sql_statement: sql_set_statement .

    $default  reduce using rule 5 (sql_statement)


State 12

   36 sql_column_name: NAME .
   38                | NAME . sql_ordering
   39 sql_function_name: NAME .
   50 sql_table: NAME .

    ASC         shift, and go to state 27
    ASCENDING   shift, and go to state 28
    DESC        shift, and go to state 29
    DESCENDING  shift, and go to state 30

    DOT       reduce using rule 50 (sql_table)
    LBR       reduce using rule 39 (sql_function_name)
    $default  reduce using rule 36 (sql_column_name)

    sql_ordering  go to state 31


State 13

   37 sql_column_name: ASTERISK .

    $default  reduce using rule 37 (sql_column_name)


State 14

    6 sql_select_statement: SELECT sql_columns_part . FROM sql_tables_part WHERE sql_expression_part sql_order_by SEMICOLON
    7                     | SELECT sql_columns_part . FROM sql_tables_part WHERE sql_expression_part SEMICOLON
    8                     | SELECT sql_columns_part . FROM sql_tables_part WHERE sql_expression_part sql_order_by
    9                     | SELECT sql_columns_part . FROM sql_tables_part WHERE sql_expression_part
   10                     | SELECT sql_columns_part . FROM sql_tables_part sql_order_by SEMICOLON
   11                     | SELECT sql_columns_part . FROM sql_tables_part SEMICOLON
   12                     | SELECT sql_columns_part . FROM sql_tables_part sql_order_by
   13                     | SELECT sql_columns_part . FROM sql_tables_part

    FROM  shift, and go to state 32


State 15

   29 sql_columns_part: sql_columns .
   31 sql_columns: sql_columns . COMMA sql_column sql_as_part

    COMMA  shift, and go to state 33

    $default  reduce using rule 29 (sql_columns_part)


State 16

   30 sql_columns: sql_column . sql_as_part

    AS  shift, and go to state 34

    $default  reduce using rule 44 (sql_as_part)

    sql_as_part  go to state 35


State 17

   32 sql_column: sql_column_name .

    $default  reduce using rule 32 (sql_column)


State 18

   34 sql_column: sql_function_name . LBR sql_column_name RBR
   35           | sql_function_name . LBR sql_table DOT sql_column_name RBR

    LBR  shift, and go to state 36


State 19

   33 sql_column: sql_table . DOT sql_column_name

    DOT  shift, and go to state 37


State 20

   50 sql_table: NAME .

    $default  reduce using rule 50 (sql_table)


State 21

   14 sql_update_statement: UPDATE sql_table_part . SET sql_eq_expressions_part WHERE sql_expression_part SEMICOLON
   15                     | UPDATE sql_table_part . SET sql_eq_expressions_part WHERE sql_expression_part
   16                     | UPDATE sql_table_part . SET sql_eq_expressions_part SEMICOLON
   17                     | UPDATE sql_table_part . SET sql_eq_expressions_part

    SET  shift, and go to state 38


State 22

   49 sql_table_part: sql_table .

    $default  reduce using rule 49 (sql_table_part)


State 23

   18 sql_insert_statement: INSERT INTO . sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR SEMICOLON
   19                     | INSERT INTO . sql_table_part LBR sql_columns_part RBR VALUES LBR sql_values_part RBR
   20                     | INSERT INTO . sql_table_part VALUES LBR sql_values_part RBR SEMICOLON
   21                     | INSERT INTO . sql_table_part VALUES LBR sql_values_part RBR

    NAME  shift, and go to state 20

    sql_table_part  go to state 39
    sql_table       go to state 22


State 24

   22 sql_delete_statement: DELETE FROM . sql_table_part WHERE sql_expression_part SEMICOLON
   23                     | DELETE FROM . sql_table_part WHERE sql_expression_part
   24                     | DELETE FROM . sql_table_part SEMICOLON
   25                     | DELETE FROM . sql_table_part

    NAME  shift, and go to state 20

    sql_table_part  go to state 40
    sql_table       go to state 22


State 25

   26 sql_set_statement: SET CATALOG . sql_catalog

    NAME  shift, and go to state 41

    sql_catalog  go to state 42


State 26

    0 $accept: sql_statement $end .

    $default  accept


State 27

   40 sql_ordering: ASC .

    $default  reduce using rule 40 (sql_ordering)


State 28

   41 sql_ordering: ASCENDING .

    $default  reduce using rule 41 (sql_ordering)


State 29

   42 sql_ordering: DESC .

    $default  reduce using rule 42 (sql_ordering)


State 30

   43 sql_ordering: DESCENDING .

    $default  reduce using rule 43 (sql_ordering)


State 31

   38 sql_column_name: NAME sql_ordering .

    $default  reduce using rule 38 (sql_column_name)


State 32
